Bug 147740 - Lower icons disappear in groupedbar compact user interface
Summary: Lower icons disappear in groupedbar compact user interface
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.1.8.1 release
Hardware: All All
: medium normal
Assignee: Szymon Kłos
URL:
Whiteboard: target:7.5.1 target:7.4.6 target:7.6.0
Keywords: bibisected, bisected, regression
: 149289 149387 (view as bug list)
Depends on:
Blocks: Notebookbar-Groupedbar
  Show dependency treegraph
 
Reported: 2022-03-02 21:51 UTC by joe.broesele
Modified: 2023-05-24 17:51 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:


Attachments
Groupedbar compact - marks showing the error and how to trigger it (23.69 KB, image/png)
2022-03-02 21:51 UTC, joe.broesele
Details
The error disappears when the Paragraph Style icon is removed by customization (22.06 KB, image/png)
2022-03-03 18:43 UTC, joe.broesele
Details
Fixes disappearing icons at the cost of a missing separator (691.49 KB, patch)
2022-04-23 12:16 UTC, joe.broesele
Details
Fixes disappearing icons with separator in place (691.30 KB, patch)
2022-04-23 12:45 UTC, joe.broesele
Details
Fixes disappearing icons with separator in place (alternative solution) (691.36 KB, patch)
2022-04-23 13:15 UTC, joe.broesele
Details

Note You need to log in before you can comment on or make changes to this bug.
Description joe.broesele 2022-03-02 21:51:37 UTC
Created attachment 178626 [details]
Groupedbar compact - marks showing the error and how to trigger it

Conditions:
* Writer user interface set to groupedbar compact
* Writer window wide enough to show all items
* Paragraph style dropdown visible

Action to trigger the error:
* Toggle Unordered List
* Toggle Ordered List

Error:
* Lower set of icons disappear.
Comment 1 stragu 2022-03-03 01:52:19 UTC
I could not reproduce with:

Version: 7.0.6.2
Build ID: 00(Build:2)
CPU threads: 8; OS: Linux 5.4; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Ubuntu package version: 1:7.0.6-0ubuntu0.18.04.1_lo1
Calc: threaded

But I could reproduce with:

Version: 7.3.0.2 / LibreOffice Community
Build ID: f1c9017ac60ecca268da7b1cf147b10e244b9b21
CPU threads: 8; OS: Linux 5.4; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded

All I had to do was:
1. Open Writer 7.3
2. Toggle the ordered list: the lower bar's items between "Edit" and "Menu" disappear.

Resizing the window brings the lower bar back.

Could you please also share the detailed version information from Help > About LibreOffice? Are you sure this happens in 7.0?
Comment 2 joe.broesele 2022-03-03 18:43:40 UTC
Created attachment 178644 [details]
The error disappears when the Paragraph Style icon is removed by customization
Comment 3 joe.broesele 2022-03-03 18:48:00 UTC
I am sorry, I thought to remember that the bug came in with version 7.0. Meanwhile I have checked these versions:

7.0.0.3: OK (no bug)
7.1.0.3: OK (no bug)
7.2.0.4: bug
7.3.0.3: bug
7.3.1.3: bug

So the bug appeared between version 7.1.0.3 and 7.2.0.4.

Another hint: The error disappears when the Paragraph Style icon is removed by customization (see attached screenshot).
Comment 4 joe.broesele 2022-03-03 18:50:59 UTC
Here my detailed version info:

Version: 7.3.0.3 (x64) / LibreOffice Community
Build ID: 0f246aa12d0eee4a0f7adcefbf7c878fc2238db3
CPU threads: 24; OS: Windows 10.0 Build 19044; UI render: Skia/Vulkan; VCL: win
Locale: de-DE (de_DE); UI: en-US
Calc: CL
Comment 5 stragu 2022-03-03 22:39:34 UTC
Also confirmed in:

Version: 7.1.8.1 / LibreOffice Community
Build ID: e1f30c802c3269a1d052614453f260e49458c82c
CPU threads: 8; OS: Linux 5.4; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded

Changing earliest version affected accordingly. Requesting a bibisect for this regression.
Comment 6 joe.broesele 2022-04-23 12:14:08 UTC
Another hint: The disappears, when the separator between the groups "Edit" and "Context" is removed in the file "notebookbar_groupedbar_compact.ui". Please see the attached example.
Comment 7 joe.broesele 2022-04-23 12:16:48 UTC
Created attachment 179743 [details]
Fixes disappearing icons at the cost of a missing separator

Separator removed (commented) in lines 3831 to 3839.
Comment 8 joe.broesele 2022-04-23 12:43:57 UTC
Moving the separator in "notebookbar_groupedbar_compact.ui" between the child section containing the "Edit" items and the child section containing the "Context" itmes fixes the problem with the separator still in place. Please see the attachment.
Comment 9 joe.broesele 2022-04-23 12:45:57 UTC
Created attachment 179744 [details]
Fixes disappearing icons with separator in place
Comment 10 joe.broesele 2022-04-23 13:15:03 UTC
Created attachment 179745 [details]
Fixes disappearing icons with separator in place (alternative solution)
Comment 11 Rafael Lima 2022-05-30 22:44:56 UTC
*** Bug 149387 has been marked as a duplicate of this bug. ***
Comment 12 Rafael Lima 2022-05-30 22:46:11 UTC
*** Bug 149289 has been marked as a duplicate of this bug. ***
Comment 13 stragu 2023-01-30 09:42:13 UTC
Bibisected with linux-64-7.1 repo to first bad commit 16b97a031079f2ebca628587ed7c80b1246c89e0 which points to core commit:

commit 53d73d532281b6734a7d4614bb74fc6cc15510f0
author	Szymon Kłos <eszkadev@gmail.com>	Wed Jun 03 15:26:50 2020 +0200
committer	Szymon Kłos <szymon.klos@collabora.com>	Tue Jun 09 19:02:25 2020 +0200
tree 9867965d96f478f87de686ef1456f89691ac239a
parent 362b949a3bd907d6cb1ed94ef415696c88d838a8
notebookbar: simplify custom widgets
Change-Id: I0176a9852a0f405fba7b6308e28abf2ca0ae280e
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/95900

Szymon, can you please have a look? This commit is also linked to bug 140557.
Comment 14 Szymon Kłos 2023-02-06 13:43:02 UTC
here is my fix proposal: https://gerrit.libreoffice.org/c/core/+/146584
Comment 15 Commit Notification 2023-02-08 09:30:21 UTC
Szymon Kłos committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/1e23e26d48eabb829c39304a78fad26b10f76d7f

tdf#147740 fix disappearing icons in groupbar

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 16 Commit Notification 2023-02-09 11:46:35 UTC
Szymon Kłos committed a patch related to this issue.
It has been pushed to "libreoffice-7-5":

https://git.libreoffice.org/core/commit/db1c7c55fe0cd35ead3174b3eb7f0cdad1a475f3

tdf#147740 fix disappearing icons in groupbar

It will be available in 7.5.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 17 ady 2023-02-11 05:29:30 UTC
*** Bug 153536 has been marked as a duplicate of this bug. ***
Comment 18 Commit Notification 2023-02-13 11:59:21 UTC
Szymon Kłos committed a patch related to this issue.
It has been pushed to "libreoffice-7-4":

https://git.libreoffice.org/core/commit/e76c651af0e4b77bc05c53191263ec49fc012e4c

tdf#147740 fix disappearing icons in groupbar

It will be available in 7.4.6.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 19 Commit Notification 2023-05-24 17:51:35 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/2cdb48eee93a3a93074184c5c8a82e571fb0bd04

tdf#141684 tdf#147740 notebookbar: fix disappearing icons in groupbar #2

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.