tdf#147740 fix disappearing icons in groupbar

Change-Id: Ia67b90d05bccbd4d2c2553109ea7372574ee21d8
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/146584
Tested-by: Jenkins
Reviewed-by: Szymon Kłos <szymon.klos@collabora.com>
(cherry picked from commit 1e23e26d48eabb829c39304a78fad26b10f76d7f)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/146629
Reviewed-by: Christian Lohmaier <lohmaier+LibreOffice@googlemail.com>